was added changed: - schemas for admin routes - new app chat (Getting chat by usernames, getting user chats) - creating chat if two users liked each others - fix bug with logs - 2 models -> chat, message
